--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://aiRoyi.github.io/bookshelf/"
+baseurl = "https://aiRoyi.github.io/blog/"
 languageCode = "en-us"
 title = ""
 # Enable comments by entering your Disqus shortname
