--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://aiRoyi.github.io/blog/"
+baseurl = "https://aiRoyi.github.io/Blog/"
 languageCode = "en-us"
 title = ""
 # Enable comments by entering your Disqus shortname
@@ -8,7 +8,7 @@ googleAnalytics = ""
 # Define the number of posts per page
 paginate = 10
 footnotereturnlinkcontents = "↩"
-theme = "hugo-icarus-theme"
+theme = "blog"
 
 
 [permalinks]
